# Jenga-tracker

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/full_visual_servo/: visual_servo.h
include/tracker_visp/: tracker.h
launch/: arduino_yolact.launch  detection.launch  learning_tracking.launch  tracking_params.launch
model/: file_cao.cao  file_init.pos  jenga_single.0.pos  jenga_single.cao
model/blocks_cao/: jenga.cao  jenga0.cao  jengaCenter.cao  jengaCenterO.cao  jengaCenterZend.cao  jengaCenterZtag.cao  jengaEditor__.cao  jengaLeftO.cao  jengaLeftZend.cao  jengaLeftZtag.cao  jengaRightO.cao  jengaRightZend.cao  jengaRightZtag.cao  jengaSide.cao  jengaSideO.cao
model/jenga_zEnd/: jenga_single.init  jenga_zEnd.0.pos  jenga_zEnd.cao  jenga_zEnd.init
msg/: ReferenceBlock.msg  angle_velocity.msg  location.msg
src/: Block_class.py  Group_finder_writer.py  LayerGroup.py  OLDvisual_servo.cpp  Yolact_first_detection.py  Yolact_full_server.py  Yolact_manual_first_detection.py  Yolact_server_Pose_initializer.py  Yolact_server_Pose_initializer_BOOL.py  Yolact_server_Pose_initializer_old.py  arduino_base.py  clientPic_toServo.cpp  prova_server_1s.py  prova_tracker_params_class.cpp  realsense_client_pic.cpp  ros_client_pic.cpp  ros_send_pic.cpp  ros_send_pic.py  singleBlock_servo.cpp  tracker.cpp  tracker_params.cpp  tracker_params_class.cpp  tracker_sim.cpp  tracker_v3.cpp  visual_servo (copia).cpp  visual_servo.cpp  visual_servo_usedepth.cpp
src/tests/: convergenceTime_test.py
srv/: BlockEstimation.srv  FirstLayerPose.srv  ForceBasedDecision.srv  RestartFirstLayer.srv  YolactInitializeCaoPose.srv
trackers/: jenga_tracker_params.xml
